# VST-SharedAudio-Bridge

./: LICENSE  README.md
LowLatencyAudioPlugin/: CMakeLists.txt  JuceHeader.h  LowLatencyAudioPlugin.cpp  LowLatencyAudioPlugin.h  LowLatencyAudioProcessorEditor.cpp  LowLatencyAudioProcessorEditor.h  README.md
SineWaveGenerator/: AudioFileReader.cpp  AudioFileReader.h  CMakeLists.txt  JuceHeader.h  README.md  SharedMemoryManager.cpp  SharedMemoryManager.h  SineWaveGenerator.cpp
